@@ -7537,3 +7537,6 @@ EPRINTS-3.1-beta-2
  * Moved tokenizing code from Index.pm into Index/Tokenizer.pm
  * Sort field values using the database
 
+2008-06-04 tdb
+ * Fixed views not working for name-type metafields, fixing #3380
+
